tests/check/mma_shape.co
// RUN: not choreo %s 2>&1 -t cute | FileCheck %s

#define M 128
#define N 256
#define K 64

__co__ auto matmul(f16 [M, K] lhs, f16 [K, N] rhs) {
  f16 [M, N] output;

  int MMA_M = 32, MMA_N = 32, MMA_K = 32;

  parallel {m, n} by [M / MMA_M / 4, N / MMA_N ] : block {
    mc = mma.fill 0.0;  // c = {0}
    parallel {g0, g1} by [4, 1]: group {
      foreach k in K / MMA_K {
        ma = mma.load lhs.chunkat(m#g0, k);
        mb = mma.load rhs.chunkat(k, n#g1);
        mma.row.col mc, ma, mb;   // row * col : c += a * b;
      }
      mma.store mc, output.chunkat(m#g0, n#g1);
    }
  }

  return output;
}

// CHECK: error: MMA [f16(a)f16(b)f16(c)f16(d): m32n32k32] is not support by current architecture(SM_86).
